Fixed portfolio alignment

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -5,7 +5,7 @@
   text-align: center;
   display: grid;
   justify-content: center;
-  justify-items: center;
+  justify-items: inherit;
   grid-gap: 40px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 0.9fr));
   grid-auto-rows: 1fr;
@@ -38,9 +38,8 @@
 }
 
 .portfolio-item span {
-  font-size: 1.1em;
+  font-size: 1.7rem;
   line-height: 1.1;
-  /* font-family: -apple-system,  BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif; */
   font-weight: 700;
   margin-top: 3rem;
   margin-bottom: 1.5rem;
